--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ToDoList</title>
 </head>
 <body>
-    <h1>TEST</h1>
+    <button id="btn">Click Me!</button>
     <script src="/dist/index.js"></script>
 </body>
 </html>
