--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDoList</title>
-</head>
-<body>
-    <button id="btn">Click Me!</button>
+  </head>
+  <body>
+    <ul id="todolist"></ul>
+    <form id="todoform" action="">
+      <input id="todoinput" type="text" placeholder="enter a todo" />
+      <button id="btn" type="submit">Click Me!</button>
+    </form>
+
     <script src="/dist/index.js"></script>
-</body>
+  </body>
 </html>
