--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDoList</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <ul id="todolist"></ul>
-    <form id="todoform" action="">
-      <input id="todoinput" type="text" placeholder="enter a todo" />
-      <button id="btn" type="submit">Click Me!</button>
-    </form>
+    <div class="container">
+      <h1>To Do List:</h1>
 
+      <form id="todoform" class="container" action="">
+        <input id="todoinput" type="text" placeholder="enter a todo" />
+        <button id="btn" type="submit">+</button>
+      </form>
+      <ul id="todolist"></ul>
+    </div>
     <script src="/dist/index.js"></script>
   </body>
 </html>
